--- a/calculator/index.html
+++ b/calculator/index.html
@@ -50,5 +50,5 @@
 
         </footer>
     </body>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </html>
