fixes more bugs (percent, decimal, some evaluation bug fixes)

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -41,7 +41,7 @@
                         <div class="special" id="changesign" data-val="change">+/-</div>
                         <div class="number" id="zero" data-val="0">0</div>
                         <div class="number" id="decimal" data-val=".">.</div>
-                        <div class="sign" id="equals" data-val="eval">=</div>
+                        <div class="special" id="equals" data-val="eval">=</div>
                     </div>
                 </div>
             </div>
