adds keyboard support and fixes some eval bugs

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -12,8 +12,8 @@
                 <div class="main-flex">
                     <div id="top">
                         <div id="screen">
-                            <div id="screen-main">500*10</div>
-                            <div id="screen-preview">5000</div>
+                            <div id="screen-main"></div>
+                            <div id="screen-preview">0</div>
                         </div>
                         <div id="extra">
                             <div id="history"></div>
